syntax = "proto3";

package pasapi;

service PointAlarmStatus {
  rpc DeepPing (Void) returns (DeepPingOutput) {}

  rpc SetPointAlarmThreshold (SetPointAlarmThresholdInput) returns (SetPointAlarmThresholdOutput) {}
  rpc GetPointAlarmThreshold (GetPointAlarmThresholdInput) returns (GetPointAlarmThresholdOutput) {}

  rpc SetPointAlarmStatus (SetPointAlarmStatusInput) returns (SetPointAlarmStatusOutput) {}
  rpc GetPointAlarmStatus (GetPointAlarmStatusInput) returns (GetPointAlarmStatusOutput) {}
  rpc GetPointAlarmStatusStream (GetPointAlarmStatusStreamInput) returns (stream GetPointAlarmStatusStreamOutput) {}
}


// DeepPing Messages
message DeepPingOutput {
  string value = 1;
}


// SetPointAlarmThreshold Messages
message SetPointAlarmThresholdInput {
  string node_id = 1;
  string user_id = 2;
  ThresholdType type = 3;
  Overall overall = 4;
}
message SetPointAlarmThresholdOutput {}


// GetPointAlarmThreshold Messages
message GetPointAlarmThresholdInput {
  string node_id = 1;
}
message GetPointAlarmThresholdOutput {
  ThresholdType type = 1;
  Overall overall = 2;
}


// SetPointAlarmStatus Messages
message SetPointAlarmStatusInput {
  string node_id = 1;
  AlarmStatus alarm_status = 2;
}
message SetPointAlarmStatusOutput {}


// GetPointAlarmStatus Messages
message GetPointAlarmStatusInput {
  string node_id = 1;
}
message GetPointAlarmStatusOutput {
  AlarmStatus alarm_status = 1;
}


// GetPointAlarmStatusStream Messages
message GetPointAlarmStatusStreamInput {}
message GetPointAlarmStatusStreamOutput {
  string node_id = 1;
  AlarmStatus alarm_status = 2;
}


enum AlarmStatus {
  NOT_CONFIGURED = 0; // No threshold configured.
  NO_DATA = 1;        // No measurement data.
  GOOD = 2;           // Latest measurement data within a good interval.
  ALERT = 3;          // Latest measurement data within an alert interval.
  DANGER = 4;         // Latest measurement data within a danger interval.
}

message Void {}

enum ThresholdType {
  NONE = 0;
  OVERALL_IN_WINDOW = 1;
  OVERALL_OUT_OF_WINDOW = 2;
}

message DoubleObject {
  double d = 1;
}

message Overall {
  DoubleObject outer_high = 3;
  DoubleObject inner_high = 4;
  DoubleObject inner_low = 5;
  DoubleObject outer_low = 6;
}